@@ -4,3 +4,4 @@ SVN /trunk
 - [r533]: rename pdbdump, pdbinfo -> vxdbdump, vxdbinfo
 - [r536]: added new vxfinger utility
 - [r547]: added new userwebpages.cgi to the Vitalnix tree
+- [r548]: rename mdsync -> vxusersync
